--- a/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
+++ b/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
@@ -6,7 +6,7 @@
         "id": "_kxZdzqlNGj_"
       },
       "source": [
-        "# Cyclists' guide to NYC - Part One(Deadliest place to cycle)\n",
+        "# Cyclists' safety guide in NYC - Part One(Deadliest place to cycle)\n",
         "> Use data visusalization to present daily threats to cyclist in NYC\n",
         "\n",
         "- toc: true \n",
