Add collapse cells

--- a/2021_10_21_Safety_Analysis_for_Cyclists_Part_One.ipynb
+++ b/2021_10_21_Safety_Analysis_for_Cyclists_Part_One.ipynb
@@ -711,6 +711,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Add 'year' column"
+      ],
+      "metadata": {
+        "id": "7fc7iHKizlyY"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "piTHvKd8ky3y",
@@ -718,7 +727,6 @@
       },
       "source": [
         "#collapse-output\n",
-        "# Add 'year' column\n",
         "df_collision_crashes['year'] = df_collision_crashes['CRASH DATE'].dt.year\n",
         "df_collision_crashes.head()"
       ],
