--- a/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
+++ b/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "2021-10-21-Safety-Analysis-for-Cyclists_Part_One.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "interpreter": {
       "hash": "cad4a36293fbd642bd9ec5732974efe614a9451839b3723e164f6917442d2993"
@@ -34,6 +33,22 @@
     "toc-showtags": false
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_kxZdzqlNGj_"
+      },
+      "source": [
+        "# Cyclists' Safety Guide in NYC - Part One\n",
+        "> Perform descriptive analytics to describe the dangerous ridership of cyclists in NYC.\n",
+        "\n",
+        "- toc: true \n",
+        "- badges: true\n",
+        "- comments: true\n",
+        "- categories: [jupyter, altair, datda visualization, seaborn, matplotlib]\n",
+        "- image: images/NYC_cycling_protest.jpg.png"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
