--- a/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
+++ b/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
@@ -46,7 +46,7 @@
         "- badges: true\n",
         "- comments: true\n",
         "- categories: [jupyter, altair, datda visualization, seaborn, matplotlib]\n",
-        "- image: images/NYC_cycling_protest.jpg.png"
+        "- image: images/NYC_cycling_protest.jpg"
       ]
     },
     {
@@ -1046,6 +1046,7 @@
         "outputId": "5031bdac-f5c1-4be1-888f-4eed68ca5ec3"
       },
       "source": [
+        "#collapse-output\n",
         "#collapse_show\n",
         "df_bike_counts = pd.read_csv('Bicycle_Counts.csv',low_memory=False)\n",
         "display(df_bike_counts.head())\n",
@@ -1299,6 +1300,7 @@
         "id": "phzy-wItky3z"
       },
       "source": [
+        "#collapse\n",
         "df_bike_counts['date'] = pd.to_datetime(df_bike_counts['date'])\n",
         "df_bike_counts['year'] = df_bike_counts['date'].dt.year\n",
         "df_bike_totalcounts = df_bike_counts.groupby(by=['year']).sum().reset_index()[['counts', 'year']]\n",
