--- a/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
+++ b/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "2021-10-21-Safety-Analysis-for-Cyclists_Part_One.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "kAwAf6QWky31"
+      ]
     },
     "interpreter": {
       "hash": "cad4a36293fbd642bd9ec5732974efe614a9451839b3723e164f6917442d2993"
@@ -1488,6 +1490,7 @@
         "outputId": "0e3ef1f1-73eb-4b2d-961b-4c7542c35e39"
       },
       "source": [
+        "#collapse-output\n",
         "df_casualties = df_collision_crashes.groupby(by=[df_collision_crashes.year]).sum()[casualties_plus_year_cols]\n",
         "df_casualties['year'] = df_casualties.index.map(str)\n",
         "df_casualties = df_casualties.reset_index(drop=True)\n",
@@ -1680,6 +1683,7 @@
         "outputId": "906bb09e-4e8c-4a6f-b4f6-dfe8ad46f1bd"
       },
       "source": [
+        "#collapse-output\n",
         "df_bike_totalcounts.head()"
       ],
       "execution_count": null,
@@ -1761,7 +1765,8 @@
         "outputId": "31d126fc-5975-4cf6-9d28-f88477e82cf2"
       },
       "source": [
-        "# df_casualties = df_casualties.merge(df_bike_totalcounts, on='year', how='right')\n",
+        "#collapse-output\n",
+        "# df_casualties merge with df_bike_totalcounts\n",
         "df_casualties = df_casualties.merge(df_bike_totalcounts, on='year', how='right')\n",
         "df_casualties"
       ],
@@ -2087,6 +2092,7 @@
         "outputId": "e8db5c58-c711-4832-cf26-4a6e8fcb45a2"
       },
       "source": [
+        "#hide\n",
         "df_collision_crashes.columns"
       ],
       "execution_count": null,
@@ -2122,6 +2128,7 @@
         "outputId": "07a93a6b-14b2-4069-b2b3-db914daa960b"
       },
       "source": [
+        "#collapse-show\n",
         "f, axes = plt.subplots(nrows=1, ncols=2, figsize=(15, 8))\n",
         "sns.barplot(data=df_casualties, x='year', y='NUMBER OF CYCLIST INJURED', ax=axes[0])\n",
         "sns.barplot(data=df_casualties, x='year', y='NUMBER OF CYCLIST KILLED', ax=axes[1])\n",
@@ -2160,6 +2167,7 @@
         "outputId": "7c840a73-5c89-45fa-8034-c69aaa4e1013"
       },
       "source": [
+        "#collapse-show\n",
         "from pdb import set_trace\n",
         "def annotate_percentage(axis, df):\n",
         "    for i, p in enumerate(axis.patches):\n",
@@ -2247,6 +2255,7 @@
         "outputId": "1831c221-be8b-4d63-d968-3e6ec8b11cb3"
       },
       "source": [
+        "#collapse-show\n",
         "plt.figure(figsize=(15, 10))\n",
         "sns.set_theme(style=\"whitegrid\")\n",
         "ax = sns.barplot(data=df_casualties[(df_casualties.year != '2012') & (df_casualties.year != '2021')], x=\"year\", y='counts', color='g')\n",
@@ -2977,6 +2986,7 @@
         "outputId": "2b78e9ba-209c-43a5-8f47-5f604db85670"
       },
       "source": [
+        "#collapse-output\n",
         "# df_cyclists_borough_yearly = df_collision_crashes.groupby(by=['BOROUGH', 'year']).sum()[casualties_plus_year_cols].reset_index()[['NUMBER OF CYCLIST INJURED', 'NUMBER OF CYCLIST KILLED', 'year', 'BOROUGH']]\n",
         "df_cyclists_borough_yearly = df_collision_crashes.groupby(by=['BOROUGH', 'CRASH DATE']).sum()[casualties_plus_year_cols].reset_index()[['NUMBER OF CYCLIST INJURED', 'NUMBER OF CYCLIST KILLED', 'CRASH DATE', 'BOROUGH']]\n",
         "df_cyclists_borough_yearly['Total Casualties of Cyclists'] = df_cyclists_borough_yearly[['NUMBER OF CYCLIST INJURED', 'NUMBER OF CYCLIST KILLED']].sum(axis=1)\n",
@@ -3094,6 +3104,7 @@
         "id": "OAeNyhUvky32"
       },
       "source": [
+        "#collapse\n",
         "alt.data_transformers.disable_max_rows()\n",
         "plot1 = alt.Chart(df_cyclists_borough_yearly).mark_bar().encode(\n",
         "    x='year(CRASH DATE):O',\n",
@@ -3147,6 +3158,7 @@
         "id": "iMGAqwisky33"
       },
       "source": [
+        "#collapse\n",
         "plot2 = alt.Chart(df_cyclists_borough_yearly).mark_bar().encode(\n",
         "    x='year(CRASH DATE):O',\n",
         "    y='sum(NUMBER OF CYCLIST KILLED):Q',\n",
@@ -3218,6 +3230,7 @@
         "outputId": "514de6bd-9821-496a-ade5-2d6d3f678d4b"
       },
       "source": [
+        "#collapse\n",
         "death_cols = ['CRASH DATE', 'CRASH TIME', 'BOROUGH', 'LATITUDE',\n",
         "       'LONGITUDE', 'LOCATION', 'NUMBER OF CYCLIST INJURED',\n",
         "       'NUMBER OF CYCLIST KILLED', 'CONTRIBUTING FACTOR VEHICLE 1',\n",
@@ -3460,6 +3473,7 @@
         "id": "4pi5M-I8ky34"
       },
       "source": [
+        "#collapse\n",
         "plot3 = alt.Chart(df_casualties_with_time).mark_circle().encode(\n",
         "    alt.X('month(CRASH DATE):O'),\n",
         "    alt.Y('year(CRASH DATE):O'),\n",
@@ -3522,6 +3536,7 @@
         "id": "udaHdYclky34"
       },
       "source": [
+        "#collapse\n",
         "plot4 = alt.Chart(df_casualties_with_time).mark_circle().encode(\n",
         "    alt.X('month(CRASH DATE):O'),\n",
         "    alt.Y('year(CRASH DATE):O'),\n",
@@ -3585,6 +3600,7 @@
         "id": "ivg-TzFNky34"
       },
       "source": [
+        "#collapse\n",
         "plot5 = alt.Chart(df_casualties_with_time).mark_circle().encode(\n",
         "    alt.X('hours(CRASH DATE):O'),\n",
         "    alt.Y('day(CRASH DATE):O'),\n",
@@ -3647,6 +3663,7 @@
         "id": "OK1jRC6rky34"
       },
       "source": [
+        "#collapse\n",
         "plot6 = alt.Chart(df_casualties_with_time).mark_circle().encode(\n",
         "    alt.X('hours(CRASH DATE):O'),\n",
         "    alt.Y('day(CRASH DATE):O'),\n",
@@ -3779,7 +3796,7 @@
         "id": "adFhY4Fiky35"
       },
       "source": [
-        "\n",
+        "#collapse\n",
         "base = alt.Chart(df_casualties_with_time_location)\n",
         "\n",
         "# xscale = alt.Scale(domain=(4.0, 8.0))\n",
@@ -3859,7 +3876,7 @@
         "id": "9IhH1zCwky35"
       },
       "source": [
-        "\n",
+        "#collapse\n",
         "base = alt.Chart(df_casualties_with_time_location)\n",
         "\n",
         "# xscale = alt.Scale(domain=(4.0, 8.0))\n",
@@ -3938,7 +3955,7 @@
         "id": "oGiyn2vVky35"
       },
       "source": [
-        "\n",
+        "#collapse\n",
         "base = alt.Chart(df_casualties_with_time_location)\n",
         "\n",
         "# xscale = alt.Scale(domain=(4.0, 8.0))\n",
@@ -4017,7 +4034,7 @@
         "id": "bof1_oEJky36"
       },
       "source": [
-        "\n",
+        "#collapse\n",
         "base = alt.Chart(df_casualties_with_time_location)\n",
         "\n",
         "# xscale = alt.Scale(domain=(4.0, 8.0))\n",
@@ -4125,6 +4142,7 @@
         "id": "MOee0RVwky36"
       },
       "source": [
+        "#collapse\n",
         "boroughs = alt.topo_feature('https://data.cityofnewyork.us/api/geospatial/tqmj-j8zm?method=export&format=GeoJSON', 'boroughs')\n",
         "background = alt.Chart(boroughs).mark_geoshape(\n",
         "    fill='lightgray',\n",
@@ -4203,6 +4221,7 @@
         "id": "V-QYQFYwky37"
       },
       "source": [
+        "#collapse\n",
         "boroughs = alt.topo_feature('https://data.cityofnewyork.us/api/geospatial/tqmj-j8zm?method=export&format=GeoJSON', 'boroughs')\n",
         "background = alt.Chart(boroughs).mark_geoshape(\n",
         "    fill='lightgray',\n",
@@ -4296,6 +4315,7 @@
         "outputId": "03390eb4-2e84-44bd-ccf3-c38ec580802b"
       },
       "source": [
+        "#collapse-output\n",
         "df_casualties_with_time.groupby(by=['BOROUGH', 'CONTRIBUTING FACTOR VEHICLE 1', 'year']).sum().sort_values(by=['NUMBER OF CYCLIST INJURED'], ascending=False).loc['BROOKLYN']"
       ],
       "execution_count": null,
@@ -4489,6 +4509,7 @@
         "outputId": "b164a92f-04b5-4376-edf7-c51df20d9c0d"
       },
       "source": [
+        "#collapse-output\n",
         "df_casualties_with_time.head()"
       ],
       "execution_count": null,
@@ -4701,6 +4722,7 @@
         "id": "RMzP1Xj6ky37"
       },
       "source": [
+        "#collapse\n",
         "brooklyn = alt.Chart(\n",
         "    df_casualties_with_time,\n",
         ").mark_bar().encode(\n",
@@ -4832,6 +4854,7 @@
         "id": "FYPQ8f_0ky38"
       },
       "source": [
+        "#collapse\n",
         "brooklyn = alt.Chart(\n",
         "    df_casualties_with_time,\n",
         ").mark_bar().encode(\n",
@@ -5003,6 +5026,7 @@
         "outputId": "6f07ff2f-6d14-49a0-df3f-210072ccacd1"
       },
       "source": [
+        "#collapse-output\n",
         "df_summons = pd.read_csv('NYPD_B_Summons__Historic_.csv')\n",
         "df_summons.head()\n"
       ],
@@ -5174,6 +5198,7 @@
         "outputId": "ec19d576-ac3c-48fb-b120-e9e153a17da1"
       },
       "source": [
+        "#collapse-output\n",
         "df_violatecode = pd.read_excel('violationcodes.xlsx')\n",
         "df_violatecode.head()"
       ],
@@ -5358,6 +5383,7 @@
         "outputId": "a0f87c9b-e452-4ca6-9704-5865adf0e7cd"
       },
       "source": [
+        "#collapse-show\n",
         "plt.figure(figsize=(20, 10))\n",
         "sns.set_theme(style=\"whitegrid\")\n",
         "g = sns.countplot(\n",
@@ -5395,6 +5421,7 @@
         "id": "piPi49GuYL35"
       },
       "source": [
+        "#collapse-show\n",
         "df_summons_top20_tickets = df_summons.loc[df_summons.VIOLATION_CODE.isin(df_summons.VIOLATION_CODE.value_counts()[:20].index)][['CITY_NM', 'DESCRIPTION']]\n",
         "df_summons_top20_tickets.head()"
       ],
@@ -5407,7 +5434,7 @@
         "id": "rTzfwrquky3-"
       },
       "source": [
-        "\n",
+        "#collapse\n",
         "alt.data_transformers.enable('default')\n",
         "alt.data_transformers.disable_max_rows()\n",
         "\n",
