--- a/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
+++ b/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
@@ -2227,7 +2227,7 @@
         "id": "kAwAf6QWky31"
       },
       "source": [
-        "### Comparison of change rate between bike counts in the city and overall injuries/fatalities of cyclists over these "
+        "### Comparison of change rate between bike counts and injuries/fatalities of cyclists over these years"
       ]
     },
     {
