--- a/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
+++ b/_notebooks/2021-10-21-Safety-Analysis-for-Cyclists-Part-One.ipynb
@@ -6,7 +6,7 @@
       "name": "2021-10-21-Safety-Analysis-for-Cyclists_Part_One.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "kAwAf6QWky31"
+        "pWbVAwaXky3z"
       ]
     },
     "interpreter": {
@@ -4974,16 +4974,7 @@
         "id": "9Izu0E87ky38"
       },
       "source": [
-        "## What factorts contribute to Brooklyn's uncontested role as the most lethal area to bike."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pGM0WtXQky38"
-      },
-      "source": [
-        "<!-- Currently, we have already known that Brooklyn has alway been the most dangerous place to bike. However, it is still not clear why 2019 suddenly took many lives of cyclists. Maybe it is because of Brooklyn's longstanding status of being the most dangerous borough to ride makes it become a ticking time bomb and 2019 just coincidentally became the year when most of tragedies happeded. -->"
+        "## What factors contribute to Brooklyn's uncontested role as the most lethal area to bike."
       ]
     },
     {
