--- a/_notebooks/2021-11-25-Sarcasm-Detection.ipynb
+++ b/_notebooks/2021-11-25-Sarcasm-Detection.ipynb
@@ -25,27 +25,10 @@
     "colab": {
       "name": "sarcasm.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_kxZdzqlNGj_"
-      },
-      "source": [
-        "# Text analysis and agile sarcasm prediction\n",
-        "> Utilize classical methods to approach sarcastic sentiment classification problem\n",
-        "\n",
-        "- toc: true \n",
-        "- badges: true\n",
-        "- comments: true\n",
-        "- categories: [jupyter, text analytics, machine learning, ensembling]\n",
-        "- image: images/sarcasm_confusion.jpeg"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -836,6 +819,7 @@
         "id": "9geG-HyzoUuj"
       },
       "source": [
+        "#hide\n",
         "def Testset_Performance(text_preprocess, classifier, cv=False):\n",
         "    pipe = Pipeline([text_preprocess,\n",
         "                     classifier,\n",
