--- a/_notebooks/2021-11-25-Sarcasm-Detection.ipynb
+++ b/_notebooks/2021-11-25-Sarcasm-Detection.ipynb
@@ -32,6 +32,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "_kxZdzqlNGj_"
+      },
+      "source": [
+        "# Text analysis and agile sarcasm prediction\n",
+        "> Utilize classical methods to approach sarcastic sentiment classification problem\n",
+        "\n",
+        "- toc: true \n",
+        "- badges: true\n",
+        "- comments: true\n",
+        "- categories: [jupyter, text analytics, machine learning, ensembling]\n",
+        "- image: images/sarcasm_confusion.jpeg"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "rrBHH08I9qdc"
       },
       "source": [
